--- a/arch/arm/boot/dts/qcom/msm8998-mtp.dts
+++ b/arch/arm/boot/dts/qcom/msm8998-mtp.dts
@@ -1,4 +1,5 @@
 /* Copyright (c) 2016, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2017 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -19,7 +20,7 @@
 / {
 	model = "Qualcomm Technologies, Inc. MSM 8998 v1 MTP";
 	compatible = "qcom,msm8998-mtp", "qcom,msm8998", "qcom,mtp";
-	qcom,board-id = <8 0>;
+	qcom,board-id = <30 0>;
 };
 
 &qusb_phy0 {
