--- a/arch/arm/boot/dts/qcom/msm8998-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8998-pinctrl.dtsi
@@ -1,4 +1,5 @@
 /* Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2017 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -942,12 +943,12 @@
 		cam_actuator_vaf_active: cam_actuator_vaf_active {
 			/* ACTUATOR POWER */
 			mux {
-				pins = "gpio27";
+				pins = "gpio29";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio27";
+				pins = "gpio29";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -956,12 +957,12 @@
 		cam_actuator_vaf_suspend: cam_actuator_vaf_suspend {
 			/* ACTUATOR POWER */
 			mux {
-				pins = "gpio27";
+				pins = "gpio29";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio27";
+				pins = "gpio29";
 				bias-pull-down; /* PULL DOWN */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -993,86 +994,6 @@
 			};
 		};
 
-		cam_sensor_depth_default: cam_sensor_depth_default {
-			mux {
-				pins = "gpio28","gpio23","gpio7";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio28","gpio23","gpio7";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_depth_sleep: cam_sensor_depth_sleep {
-			mux {
-				pins = "gpio28","gpio23","gpio7";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio28","gpio23","gpio7";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_depth_v1_active: cam_sensor_depth_v1_active {
-			/* Depth VANA */
-			mux {
-				pins = "gpio24";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio24";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_depth_v1_sleep: cam_sensor_depth_v1_sleep {
-			mux {
-				pins = "gpio24";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio24";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_depth_v2_active: cam_sensor_depth_v2_active {
-			/* Depth CUSTOM2 */
-			mux {
-				pins = "gpio21";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio21";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
-		cam_sensor_depth_v2_sleep: cam_sensor_depth_v2_sleep {
-			mux {
-				pins = "gpio21";
-				function = "gpio";
-			};
-
-			config {
-				pins = "gpio21";
-				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
-			};
-		};
-
 		cam_sensor_mclk0_active: cam_sensor_mclk0_active {
 			/* MCLK0 */
 			mux {
@@ -1084,7 +1005,7 @@
 			config {
 				pins = "gpio13";
 				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
+				drive-strength = <4>; /* 2 MA */
 			};
 		};
 
@@ -1099,19 +1020,19 @@
 			config {
 				pins = "gpio13";
 				bias-pull-down; /* PULL DOWN */
-				drive-strength = <2>; /* 2 MA */
+				drive-strength = <4>; /* 2 MA */
 			};
 		};
 
 		cam_sensor_rear_active: cam_sensor_rear_active {
 			/* RESET, STANDBY */
 			mux {
-				pins = "gpio30","gpio29";
+				pins = "gpio30", "gpio80";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio30","gpio29";
+				pins = "gpio30", "gpio80";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1371,12 +1292,12 @@
 		cam_sensor_rear_suspend: cam_sensor_rear_suspend {
 			/* RESET, STANDBY */
 			mux {
-				pins = "gpio30","gpio29";
+				pins = "gpio30","gpio80";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio30","gpio29";
+				pins = "gpio30","gpio80";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1393,7 +1314,7 @@
 			config {
 				pins = "gpio14";
 				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
+				drive-strength = <4>; /* 2 MA */
 			};
 		};
 
@@ -1408,7 +1329,7 @@
 			config {
 				pins = "gpio14";
 				bias-pull-down; /* PULL DOWN */
-				drive-strength = <2>; /* 2 MA */
+				drive-strength = <4>; /* 2 MA */
 			};
 		};
 
@@ -1445,12 +1366,12 @@
 		cam_sensor_rear2_active: cam_sensor_rear2_active {
 			/* RESET, STANDBY */
 			mux {
-				pins = "gpio9","gpio8";
+				pins = "gpio9";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio9","gpio8";
+				pins = "gpio9";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1565,11 +1486,11 @@
 		cam_sensor_rear2_suspend: cam_sensor_rear2_suspend {
 			/* RESET, STANDBY */
 			mux {
-				pins = "gpio9","gpio8";
+				pins = "gpio9";
 				function = "gpio";
 			};
 			config {
-				pins = "gpio9","gpio8";
+				pins = "gpio9";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1586,7 +1507,7 @@
 			config {
 				pins = "gpio15";
 				bias-disable; /* No PULL */
-				drive-strength = <2>; /* 2 MA */
+				drive-strength = <4>; /* 2 MA */
 			};
 		};
 
@@ -1601,19 +1522,19 @@
 			config {
 				pins = "gpio15";
 				bias-pull-down; /* PULL DOWN */
-				drive-strength = <2>; /* 2 MA */
+				drive-strength = <4>; /* 2 MA */
 			};
 		};
 
 		cam_sensor_front_active: cam_sensor_front_active {
 			/* RESET  VANA*/
 			mux {
-				pins = "gpio28", "gpio29";
+				pins = "gpio28", "gpio27","gpio9";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio28", "gpio29";
+				pins = "gpio28", "gpio27","gpio9";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1689,12 +1610,12 @@
 		cam_sensor_front_suspend: cam_sensor_front_suspend {
 			/* RESET */
 			mux {
-				pins = "gpio28";
+				pins = "gpio28", "gpio27","gpio9";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio28";
+				pins = "gpio28", "gpio27","gpio9";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1739,6 +1660,31 @@
 					bias-pull-down; /* pull down */
 				};
 			};
+		};
+
+		mdss_vpnl_active: mdss_vpnl_active {
+				mux {
+					pins = "gpio63";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio63";
+					drive-strength = <8>; /* 8 mA */
+					bias-disable=<0>;
+					output-high;
+				};
+		};
+
+		mdss_vpnl_suspend: mdss_vpnl_suspend {
+				mux {
+					pins = "gpio63";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio63";
+					drive-strength = <2>; /* 2 mA */
+					bias-pull-down; /* pull down */
+				};
 		};
 
 		pmx_mdss_te {
@@ -1970,7 +1916,7 @@
 				config {
 					pins = "gpio89";
 					drive-strength = <2>;
-					bias-pull-down;
+					bias-disable;
 				};
 			};
 
@@ -2034,6 +1980,46 @@
 			};
 		};
 
+		bk_ts_mux {
+			bk_ts_active: bk_ts_active {
+				mux {
+					pins = "gpio58", "gpio59";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio58", "gpio59";
+					drive-strength = <16>;
+					bias-pull-up;
+				};
+			};
+
+			bk_ts_reset_suspend: bk_ts_reset_suspend {
+				mux {
+					pins = "gpio59";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio59";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+
+			bk_ts_int_suspend: bk_ts_int_suspend {
+				mux {
+					pins = "gpio58";
+					function = "gpio";
+				};
+
+				config {
+					pins = "gpio58";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+		};
 		sdc2_clk_on: sdc2_clk_on {
 			config {
 				pins = "sdc2_clk";
@@ -3280,6 +3266,75 @@
 			};
 		};
 
+		fp_mux {
+			fp_active: fp_active {
+				mux {
+					pins = "gpio121";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio121";
+					drive-strength = <8>;
+					bias-disable;
+				};
+			};
+
+			fp_suspend: fp_suspend {
+				mux {
+					pins = "gpio121";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio121";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+		};
+		/* GPIO_37 : FP_RESET_N */
+		msm_gpio_37: msm_gpio_37 {
+			mux {
+				 pins = "gpio37";
+				 function = "gpio";
+			};
+
+			config {
+				pins = "gpio37";
+				drive-strength = <2>;
+				bias-disable;
+				output-low;
+			};
+		};
+
+		/* GPIO_37 : FP_RESET_N, state device active*/
+		msm_gpio_37_output_high: msm_gpio_37_output_high {
+			mux {
+				pins = "gpio37";
+				function = "gpio";
+			};
+
+			config {
+				pins = "gpio37";
+				drive-strength = <2>;
+				bias-disable;
+				output-high;
+			};
+		};
+
+		/* GPIO_121 : FP_INT_N */
+		msm_gpio_121: msm_gpio_121 {
+			mux {
+				pins = "gpio121";
+				function = "gpio";
+			};
+
+			config {
+				pins = "gpio121";
+				drive-strength = <2>;
+				bias-pull-down;
+			};
+		};
+
 		spkr_1_sd_mediabox {
 			spkr_1_sd_sleep_mediabox: spkr_1_sd_sleep_mediabox {
 				mux {
@@ -3334,6 +3389,31 @@
 			};
 		};
 
+		gpio_rf {
+			gpio_rf_active: gpio_rf_active {
+				mux {
+					pins = "gpio119";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio119";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+			 gpio_rf_suspend: gpio_rf_suspend {
+				mux {
+					pins = "gpio119";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio119";
+					drive-strength = <2>;
+					bias-disable;
+				};
+			};
+		};
+
 		sdc2_cd_on_mediabox: sdc2_cd_on_mediabox {
 			mux {
 				pins = "gpio86";
@@ -3357,6 +3437,84 @@
 				pins = "gpio86";
 				bias-pull-up;           /* pull up */
 				drive-strength = <2>;   /* 2 MA */
+			};
+		};
+
+		rcv_id {
+			rcv_id_no_pull: rcv_id_no_pull {
+				mux {
+					pins = "gpio11";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio11";
+					drive-strength = <8>;
+					bias-disable;
+					input-enable;
+				};
+			};
+			rcv_id_pull_up: rcv_id_pull_up {
+				mux {
+					pins = "gpio11";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio11";
+					drive-strength = <8>;
+					bias-pull-up;
+					input-enable;
+				};
+			};
+			rcv_id_pull_down: rcv_id_pull_down {
+				mux {
+					pins = "gpio11";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio11";
+					drive-strength = <8>;
+					bias-pull-down;
+					input-enable;
+				};
+			};
+		};
+
+		spk_id {
+			spk_id_no_pull: spk_id_no_pull {
+				mux {
+					pins = "gpio100";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio100";
+					drive-strength = <8>;
+					bias-disable;
+					input-enable;
+				};
+			};
+			spk_id_pull_up: spk_id_pull_up {
+				mux {
+					pins = "gpio100";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio100";
+					drive-strength = <8>;
+					bias-pull-up;
+					input-enable;
+				};
+			};
+			spk_id_pull_down: spk_id_pull_down {
+				mux {
+					pins = "gpio100";
+					function = "gpio";
+				};
+				config {
+					pins = "gpio100";
+					drive-strength = <8>;
+					bias-pull-down;
+					input-enable;
+				};
 			};
 		};
 	};
